# inforno

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
assets/: cache2.db
doc/: app.ron  cache.db.drawio  inforno2.drawio  main_db.drawio  openrouter_models.txt  openrouter_models_large.ron  response_ollama.ron  response_openrouter.ron
doc/scripts/syntax/: my_c_syntax.rhai
examples/: v02_egui.rs  v04_async.rs  v05_md.rs  v07_keyring.rs  v08_openrouter.rs  v09_ollama.rs  v10_file_open.rs  v11_ollama_stream.rs  v12_openrouter_stream.rs  v13_openrouter_history.rs  v14_md_cleanup.rs  v15_math_latex.rs
locales/: en.yml  ru.yml
src/: common.rs  main.rs  ollama.rs  openr.rs
src/bulat/: mod.rs
src/bulat/editor/: highlighting.rs  mod.rs
src/bulat/editor/completer/: mod.rs
src/bulat/editor/syntax/: c.rs  loader.rs  mod.rs  rust.rs
src/bulat/editor/themes/: mod.rs  sv.rs
src/db/: cache.rs  mod.rs
src/gui/: agent_config.rs  autocomplete.rs  bottom_panel.rs  chat.rs  key_manager.rs  math_render.rs  mod.rs  panes.rs  preset_editor.rs  right_panel.rs  side_panel.rs  split_button.rs  top_panel.rs
