[package]
name = "inforno"
version = "0.1.0"
edition = "2024"
default-run = "inforno"

[dependencies]
# only used in v04_async binary:
reqwest = { version = "0.13.2", features = ["json"] }
rand = "0.10.0"
# walkers = "0.50.0"

dotenv = "0.15.0"
eframe = { version = "0.33.2", features = ["persistence"] }
egui = "0.33.2"
env_logger = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
egui_commonmark = { version = "0.22.0", features = ["load-images", "pulldown_cmark", "better_syntax_highlighting", "document-features", "embedded_image", "macros", "fetch", "svg"] }
ollama-rs = { version = "0.3.4", features = ["stream"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
directories = "6.0.0"
thiserror = "2.0.18"
secrecy = "0.10.3"
keyring = { version = "3.6.3", features = ["sync-secret-service", "crypto-rust", "apple-native", "windows-native", "vendored"] }
openrouter-rs = "0.6.1"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
egui_extras = { version = "0.33.2", features = ["all_loaders", "default", "svg"] }
image = { version = "0.25.10", features = ["jpeg", "png", "webp"] }
egui_autocomplete = { version = "12.0.0", features = ["serde"] }
chrono = "0.4.44"
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
rfd = "0.17.2"
rust-i18n = "3.1.5"
futures-util = "0.3.32"
msix = "0.4.0"
regex = "1.12.3"
typst = "0.14.2"
typst-svg = "0.14.2"
mitex = "0.2.4"
typst-assets = { version = "0.14.2", features = ["fonts"] }
logos = "0.16.1"
similar = "2.7.0"

[[bin]]
name = "inforno"
path = "src/main.rs"
